# CrossMailCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
CrossMailCpp/: email.yaml  smtp.h
CrossMailCpp/python/: email_server.py
cxx/: email.h
cxx/python/: email_server.py
example/: sendemail.cxx
